--- a/readme
+++ b/readme
@@ -1,14 +1,15 @@
 create the conda environment
-'''
+
+```
 conda env create -f environment.yml
-conda activate kopernikus-test
-'''
+conda activate kopernikus-challenge
+```
 
 Different resolutions and their counts.
 (1080, 1920) and (1520, 2688) are counted multiple times.
 One image is broken (can be opened by cv but not by os and contains no resolution), one image has a useless small resolution.
 
-'''
+```
 0 (1520, 2688, 3)
 1 (480, 640, 3)
 115 (1520, 2688, 3)
@@ -21,6 +22,6 @@ One image is broken (can be opened by cv but not by os and contains no resolutio
 581 (1080, 1920, 3)
 587 (675, 1200, 3)
 588 (1080, 1920, 3)
-'''
+```
 
 
